--- a/NET/TrackpadNetConsole/TrackpadNetConsole/TrackpadNetConsole.csproj
+++ b/NET/TrackpadNetConsole/TrackpadNetConsole/TrackpadNetConsole.csproj
@@ -4,11 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="InTheHand.BluetoothLE" Version="4.0.41" />
-  </ItemGroup>
 
 </Project>
