--- a/NET/TrackpadNetConsole/TrackpadNetConsole/TrackpadNetConsole.csproj
+++ b/NET/TrackpadNetConsole/TrackpadNetConsole/TrackpadNetConsole.csproj
@@ -7,4 +7,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="InputSimulator" Version="1.0.4" />
+  </ItemGroup>
+
 </Project>
